<resources>
    <string name="app_name">ShoppingApp</string>
    <string name="total_text">Total: $%d</string>
    <string name="checkout">Checkout</string>
    <string name="cart_description">Go to Cart</string>
    <string name="profile_description">Go to Profile</string>
    <string name="app_logo_description">App Logo</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="profile_picture_description">Profile Picture</string>
    <string name="user_email_placeholder">User Email</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">Phone Number</string>
    <string name="address_hint">Address</string>
    <string name="save_profile">Save Profile</string>
    <string name="logout">Logout</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register_button_text">Register</string>
    <string name="item_image_description">Product Image</string>
    <string name="item_name_placeholder">Item Name</string>
    <string name="item_price_placeholder">Item Price</string>
    <string name="button_decrease">-</string>
    <string name="button_increase">+</string>
    <string name="remove_button_text">Remove</string>
    <string name="decrease_quantity">Decrease quantity</string>
    <string name="increase_quantity">Increase quantity</string>
    <string name="current_quantity">Current quantity</string>
    <string name="remove_item">Remove this item</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="browse">Browse</string>
    <string name="add_to_cart_description">Add this item to the cart</string>
    <string name="browse_description">View item details</string>
    <string name="item_image">Image of the item</string>
    <string name="profile">Profile image</string>
    <string name="cart">Cart image</string>
    <string name="itemRating">Rating for the items</string>
</resources>